--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
     <h2 style="text-align: center;">I am Familiar with</h2>
     <div class="skillbutton">
       <button href="#" class="proglow-button1">
-        <img class="java" src="https://imgs.search.brave.com/MJkWobIP3Dhc-YHHFeZUEooESQMoxn_QbIcyvDwa-g0/rs:fit:500:0:0/g:ce/aHR0cHM6Ly9sb2dv/cy13b3JsZC5uZXQv/d3AtY29udGVudC91/cGxvYWRzLzIwMjIv/MDcvSmF2YS1Mb2dv/LTcwMHgzOTQuanBn">
+        <img class="java" src="Java.jpg">
         JAVA
       </button>
       <button href="#" class="proglow-button1">
-        <img class="python" src="https://imgs.search.brave.com/Y_P76fzabawTW2gYhyK1ccy80stj2XWffWQX4R6ep3g/rs:fit:500:0:0/g:ce/aHR0cHM6Ly9sb2dv/ZG93bmxvYWQub3Jn/L3dwLWNvbnRlbnQv/dXBsb2Fkcy8yMDE5/LzEwL3B5dGhvbi1s/b2dvLnBuZw">
+        <img class="python" src="python.jpg">
         PYTHON
       </button>
       <button href="#" class="proglow-button1">
@@ -163,6 +163,7 @@
     <a href="whatsapp:+919902209928" style="color:grey;"><ion-icon name="logo-whatsapp"></ion-icon></a>
     <a id="mailid" href="mailto:tharunck123@gmail.com" style="color: grey; padding-left: 20px;"><ion-icon name="mail-outline"></ion-icon></a>
   </div>
+  <div class="form_port">
   <form action="form-process.php" method="post">
     <div class="forminput">
         <label for="label-name" style="font-family:cursive; font-size: 20px ;">Name</label>
@@ -178,6 +179,7 @@
       <input type="button" value="SEND MESSAGE" class="submitbutt">
     </div>
 </form>
+</div>
   </div>
   <br><hr>
   <footer>
