--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <img class="resume-gif" src="https://media.tenor.com/wF5RiCnfj34AAAAM/work-computer.gif">
     </div>
     <div class="downloadresume">
-      <button id="resume1"><a href="resume 4.png" download="resume 4.png">Resume</a></button>
+      <a href="resume.png" download="resume.png"><button id="resume1">Resume</button></a>
     </div>
   </div>
   <hr>
